# kafka-ui

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.md   docker-compose.yml  entrypoint.sh  nginx.conf  nuxt.config.js  package-lock.json  package.json
.github/worflows/: image.yml
.github/workflows/: latest.yml
.nuxt/: App.js  index.js  router.js  store.js
.nuxt/components/: nuxt-loading.vue
backend/: Makefile  README.md  go.mod  go.sum  main.go
backend/application/: application.go
backend/config/: config.go
backend/piper/: index.js  main.js  package.json
backend/provider/: index.js  package-lock.json  package.json  provider.go
backend/store/: message.go  store.go
backend/ws/: comparator.go  mapper.go  type.go  ws_service.go
backend_new/: go.mod  main.go
backend_new/provider/: provider.go
backend_new/store/: store.go
backend_new/ws/: mapper.go  ws_service.go
components/: MessagesTable.vue  Table.vue  TopicNav.vue
kafka-ui-server/: Cargo.toml
kafka-ui-server/src/: kafka.rs  main.rs  rethink.rs  ws.rs
layouts/: default.vue
pages/: index.vue
piper/: consumer.js  logger.js  main.js  package-lock.json  package.json  topic.js
piper/kafka/: consumer.js  topic.js
plugins/client/: json-editor.js  screen-size.js
plugins/server/: element-ui.js
proxy/: index.js  package-lock.json  package.json
views/: MessagesView.vue  TopicsView.vue
webapp/: .eslintrc.js  Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json  vue.config.js
webapp/assets/: buttonSlide.css  global.css  prism.css  transition.css
(+57 files in other folders)
